# yfinance_cpp

./: COMPLETION_SUMMARY.md  EXAMPLES.md  LICENSE  README.md  build.sh  install.sh  yfinance_cpp-config.cmake  yfinance_cpp.pc.in
examples/: example_basic.cpp  example_endpoint_test.cpp  example_ko_mo_test.cpp  example_simple.cpp
include/: data_structures.h  date_utils.h  http_client.h  json_parser.h  ticker.h  yf_data.h  yfconvert.h
src/: CMakeLists.txt  data_structures.cpp  date_utils.cpp  http_client.cpp  json_parser.cpp  ticker.cpp  yfconvert.cpp
tests/: test_basic.cpp
yfconvert_cpp/: .gitignore  CMakeLists.txt
yfconvert_cpp/examples/: CMakeLists.txt  example_advanced.cpp
yfconvert_cpp/include/: ticker.h  utils.h
yfconvert_cpp/src/: ticker.cpp  utils.cpp  yf_data.cpp
yfconvert_cpp/tests/: CMakeLists.txt
